# VHQ_LAG_v2

./: .gitignore  .npmrc  Cargo.toml  PROGRESS.md  README.md  build.bat  index.html  package.json  pnpm-lock.yaml  setup_env.bat  tailwind.config.js  vite.config.ts
docs/: MASTER_PLAN.md  PROGRESS.md  PROJECT_RULES.md
n8n-workflows/: README.md  ceo-pipeline.json  ghost-pipeline.json  vitra-pipeline.json
scripts/: setup.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  VHQ_LAG_v2.code-workspace  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  system.rs  tests.rs
src-tauri/src/agents/: ceo.rs  ghost.rs  mod.rs  vitra.rs
src/components/: Layout.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/pages/: Agents.tsx  CEO.tsx  Dashboard.tsx  Files.tsx  Ghost.tsx  Settings.tsx  Vitra.tsx  Workflows.tsx
