[package]
name = "vhq_lag_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
rand = "0.8"
dirs = "6.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
